# gerenciador-de-arquivos-astro

./: .env.example  .gitignore  IMPLEMENTACAO.md  README.md  astro.config.mjs  deno.json  drizzle.config.ts  package-lock.json  package.json
.drizzle/: visualizer.json
.github/: copilot-instructions.md
scripts/: setup-tauri.ps1  setup-tauri.sh
src/: env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs  sessions.rs  types.rs
src-tauri/src/commands/: auth.rs  dead_archive.rs  departments.rs  documents.rs  employees.rs  file_cabinets.rs  labels.rs  loans.rs  mod.rs  movements.rs  reports.rs  storage.rs
src/components/app/: AlertBanner.astro  AppHeader.astro  AuthGate.astro  DashboardCards.astro  MovementPanel.astro  QuickNav.astro  Sidebar.astro  StoragePanel.astro  SummaryPanel.astro
src/db/: client.ts  schema.ts
src/electron/: database.ts  main.ts  preload.ts  sessions.ts  types.ts
src/layouts/: AppLayout.astro  Layout.astro
src/pages/: home.astro  index.astro
src/pages/archive/: index.astro
src/pages/cabinets/: index.astro
src/pages/employees/: details.astro  form.astro  index.astro
src/pages/loans/: index.astro
src/pages/reports/: index.astro
src/pages/settings/: index.astro
src/pages/tools/: labels.astro
src/scripts/: app.ts  archive-api.ts
src/scripts/modules/: auth.ts  movements.ts  storage.ts  ui.ts
src/styles/: app.css  global.css
src/types/: archive.ts
