[package]
name = "arquivo-inteligente"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
anyhow = "1.0.100"
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
parking_lot = "0.12.5"
rusqlite = { version = "0.37.0", features = ["bundled", "functions"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4"] }

[dependencies.tauri]
version = "2.9.3"
features = ["wry", "config-json5"]
